deployment/k8s/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: mra
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      name: api-gateway
      namespace: mra
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: ghcr.io/ubaid4j/multiple-apps-routing/api-gateway:0.0.1-snapshot
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: 80
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: 80
