deployment/k8s/api-gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: mra
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
